# spatial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_spatial.c
cmake/: spatial.pc.in
spatial/: README.md
spatial/include/: module.modulemap
spatial/include/spatial/: common.h  node.h  pose.h  spatial.h  transform.h  version.h
spatial/src/: common.h  spatial.c
spatial/src/posix/: thread.c  thread.h
spatial/src/thread/: thread.h
spatial/src/win/: thread.c  thread.h
spec/: 2d.md  README.md  authority.md  handle.md  hotpath.md  parallel.md  pose.md  update.md
tests/: stress_spatial.c  test_spatial.c
